--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,5 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=ccccc:wght@300;500&display=swap');
 @tailwind base;
 
 @tailwind components;
 
 @tailwind utilities;
+
+@font-face{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Poppins-Regular'), url(../assets/fonts/Poppins-Regular.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Kanit';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Kanit-Regular'), url(../assets//fonts/Kanit-Regular.ttf) format('truetype');
+  }
+  @font-face {
+    font-family: 'Rubik Mono One';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src:  local('RubikMonoOne-Regular'), url(../assets//fonts/RubikMonoOne-Regular.ttf) format('truetype');
+  }
