Fixes Font Issue. Poppin fonts now working.

--- a/src/index.css
+++ b/src/index.css
@@ -6049,6 +6049,10 @@ video {
   clear: none;
 }
 
+.font-poppins {
+  font-family: Poppins;
+}
+
 .font-sans {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
