--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
-
 @tailwind base;
 
 @tailwind components;
@@ -11,5 +9,10 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Poppins-Regular'), url(./assets/fonts/Poppins-Regular.ttf) format('truetype');
+    src: local('Poppins-Regular'), url('../assets/fonts/Poppins-Regular.ttf') format('truetype');
 }
+
+
+
+
+
