Fixes Font Poppins bug.

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -4,15 +4,13 @@
 
 @tailwind utilities;
 
-@font-face{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Poppins-Regular'), url('../assets/fonts/Poppins-Regular.ttf') format('truetype');
-}
-
-
-
-
-
+  @layer base {
+    @font-face{
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url('https://fonts.googleapis.com/css2?family=Poppins&display=swap') format('truetype');
+        src: local('Poppins-Regular') url('../assets/fonts/Poppins-Regular.ttf') format('truetype');
+    }
+  }
